--- a/ecommurz-app-deployment.yaml
+++ b/ecommurz-app-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-status: "update"
-        vault.hashicorp.com/agent-inject-secret-ecommurzapp: "database/creds/ecommurz-app"
+        vault.hashicorp.com/agent-inject-secret-ecommurzapp: "database/creds/readonly"
         vault.hashicorp.com/secret-volume-path-ecommurzapp: "/app/config"
         vault.hashicorp.com/agent-inject-file-ecommurzapp: "conf.yaml"
         vault.hashicorp.com/agent-inject-template-ecommurzapp: |
