--- a/ecommurz-app-deployment.yaml
+++ b/ecommurz-app-deployment.yaml
@@ -15,11 +15,11 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-status: "update"
-        vault.hashicorp.com/agent-inject-secret-ecommurzapp: "database/creds/readonly"
+        vault.hashicorp.com/agent-inject-secret-ecommurzapp: "database/creds/ecommurz-db-readonly"
         vault.hashicorp.com/secret-volume-path-ecommurzapp: "/app/config"
         vault.hashicorp.com/agent-inject-file-ecommurzapp: "conf.yaml"
         vault.hashicorp.com/agent-inject-template-ecommurzapp: |
-          {{- with secret "database/creds/readonly" -}}
+          {{- with secret "database/creds/ecommurz-db-readonly" -}}
           DB_HOST: ecommurz-db
           DB_PORT: 5432
           DB_USERNAME: {{ .Data.username }}
