--- a/ecommurz-app-deployment.yaml
+++ b/ecommurz-app-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: ecommurz-app
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: ecommurz-app
@@ -31,7 +32,7 @@ spec:
       serviceAccountName: ecommurz-app
       containers:
       - name: ecommurz-app
-        image: fadhilthomas/ecommurz-app:1.3
+        image: fadhilthomas/ecommurz-app:1.4
         ports:
         - name: http
           containerPort: 8090
